@@ -37,7 +37,9 @@ image<footnote id="gtk-miniiso">
 
 <para>
 The mini ISO image can be downloaded from a Debian mirror as described
-in <xref linkend="downloading-files"/>. Look for <quote>gtk-miniiso</quote>.
+in <xref linkend="downloading-files"/>. Look for
+<phrase condition="etch"><file>gtk-miniiso</file></phrase>
+<phrase condition="lenny"><file>netboot/gtk/mini.iso</file></phrase>.
 </para>
 
 </footnote>, which is mainly useful for testing; in this case the image is
@@ -51,7 +53,9 @@ image is available<footnote id="gtk-miniiso">
 
 <para>
 The mini ISO image can be downloaded from a Debian mirror as described
-in <xref linkend="downloading-files"/>. Look for <quote>gtk-miniiso</quote>.
+in <xref linkend="downloading-files"/>. Look for
+<phrase condition="etch"><file>gtk-miniiso</file></phrase>
+<phrase condition="lenny"><file>netboot/gtk/mini.iso</file></phrase>.
 </para>
 
 </footnote>. It should work on almost all PowerPC systems that have
