@@ -18,6 +18,7 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Add build dependencies on texlive-lang-* packages for languages for which
     the manual has translations.
   * Document new boot parameters "lowmem" and "dmraid".
+  * Document new location of graphical mini.iso images.
 
   [ Joey Hess ]
   * Document new lilo-installer/skip preseed.
@@ -26,7 +27,7 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Recommend preseeding mirror/country to "manual" rather than "enter
     information manually" (choose-mirror 2.17).
 
- -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 10:57:09 +0200
+ -- Frans Pop <fjp@debian.org>  Sat,  7 Jul 2007 19:00:39 +0200
 
 installation-guide (20070319) unstable; urgency=low
 
